# caslex

./: Cargo.toml  README.md
.github/workflows/: CI.yml
caslex/: Cargo.toml  README.md
caslex-extra/: Cargo.toml  README.md
caslex-extra/src/: closer.rs  hooks.rs  lib.rs  observability.rs
caslex-extra/src/security/: jwt.rs  mod.rs
caslex-extra/src/storages/: mod.rs  postgres_pool.rs
caslex-http/: Cargo.toml  README.md
caslex-http/src/: extractors.rs  lib.rs
caslex-http/src/middlewares/: auth.rs  mod.rs
caslex/src/: errors.rs  lib.rs  metrics.rs  server.rs  swagger.rs  trace.rs
caslex/src/middlewares/: auth.rs  mod.rs  trace.rs
caslex/src/security/: jwt.rs
caslex/src/storages/: mod.rs  postgres_pool.rs
examples/http-error-handling/: Cargo.toml
examples/http-error-handling/src/: main.rs
examples/http-hello-world/: Cargo.toml
examples/http-hello-world/src/: main.rs
examples/http-jwt-auth/: Cargo.toml
examples/http-jwt-auth/src/: main.rs
examples/http-observability/: Cargo.toml
examples/http-observability/src/: main.rs
examples/http-processes/: Cargo.toml
examples/http-processes/src/: main.rs
examples/postgres-pool/: Cargo.toml
examples/postgres-pool/src/: main.rs
examples/setup-defaults/: Cargo.toml
examples/setup-defaults/src/: main.rs
