[package]
name = "caslex-extra"
version = "0.1.0"
categories = ["asynchronous", "network-programming", "web-programming::http-server"]
description = "Tools for creating web services"
edition = "2024"
rust-version.workspace = true
homepage = "https://github.com/mkbeh/caslex"
license = "MIT"
keywords = ["caslex"]
readme = "README.md"
repository = "https://github.com/mkbeh/caslex"

[features]
jwt = ["dep:jsonwebtoken"]
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:humantime"]

[dependencies]
anyhow = { version = "1.0.97" }
clap = { version = "4.5.34", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry", "std", "fmt", "json"] }
tracing-opentelemetry = { version = "0.30.0" }
opentelemetry = { version = "0.29.0", features = ["trace", "internal-logs"] }
opentelemetry-otlp = { version = "0.29.0", features = ["trace", "http-proto"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio", "trace"] }

# optional dependencies
humantime = { version = "2.2.0", optional = true }
jsonwebtoken = { version = "9.3.1", optional = true }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"], optional = true }
deadpool-postgres = { version = "0.14.1", optional = true }
