[package]
name = "caslex-extra"
version = "0.2.5"
categories = ["asynchronous", "network-programming", "web-programming::http-server"]
description = "Tools for creating web services"
edition = "2024"
homepage = "https://github.com/mkbeh/caslex"
license = "MIT"
keywords = ["caslex"]
readme = "README.md"
repository = "https://github.com/mkbeh/caslex"

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-public-api-crates]
allowed = ["caslex-extra"]

[features]
jwt = ["dep:jsonwebtoken"]
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres"]
observability = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tracing-subscriber",
    "dep:tracing-opentelemetry",
]

[dependencies]
anyhow = { version = "1.0.98" }
clap = { version = "4.5.40", features = ["derive", "env"] }
humantime = { version = "2.2.0" }
serde = { version = "1.0.219", features = ["derive"] }
tracing = { version = "0.1.41", default-features = false }

# optional dependencies
deadpool-postgres = { version = "0.14.1", optional = true }
jsonwebtoken = { version = "9.3.1", optional = true }
opentelemetry = { version = "0.30.0", features = ["trace", "internal-logs"], optional = true }
opentelemetry-otlp = { version = "0.30.0", features = ["trace", "http-proto"], optional = true }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "trace"], optional = true }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"], optional = true }
tracing-opentelemetry = { version = "0.31.0", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry", "std", "fmt", "json"], optional = true }
