[package]
name = "example-http-error-handling"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
caslex = { path = "../../caslex" }
caslex-extra = { path = "../../caslex-extra", features = ["observability"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
validator = { version = "0.20.0", features = ["derive"] }

[lints]
workspace = true
