[package]
name = "example-http-error-handling"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
caslex = { path = "../../caslex" }
caslex-extra = { path = "../../caslex-extra", features = ["observability"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
validator = { version = "0.20.0", features = ["derive"] }

[lints]
workspace = true
