[package]
name = "example-http-jwt-auth"
version = "0.1.0"
edition = "2024"
publish = false
rust-version.workspace = true

[dependencies]
caslex = { path = "../../caslex" , features = ["auth"]}
caslex-extra = {path = "../../caslex-extra", features = ["observability"]}
tokio = { version = "1.44.1", features = ["full"] }
axum = "0.8.3"
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }

[lints]
workspace = true
