[package]
name = "example-postgres-pool"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.3"
caslex = { path = "../../caslex" }
caslex-extra = { path = "../../caslex-extra", features = ["postgres", "observability"] }
deadpool-postgres = { version = "0.14.1" }
tokio = { version = "1.44.1", features = ["full"] }
utoipa = "5.3.1"
utoipa-axum = "0.2.0"

[lints]
workspace = true
