[package]
name = "example-setup-defaults"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.4"
caslex = { path = "../../caslex" }
caslex-extra = { path = "../../caslex-extra", features = ["observability"] }
tokio = { version = "1.47.1", features = ["full"] }
utoipa = "5.4.0"
utoipa-axum = "0.2.0"

[lints]
workspace = true
